@@ -12,9 +12,11 @@ mle2(minuslogl, start, method, optimizer,
     subset=NULL,
 default.start=TRUE, eval.only = FALSE, vecpar=FALSE,
 parameters=NULL,
+parnames=NULL,
 skip.hessian=FALSE,trace=FALSE,
 gr,\dots)
-calc_mle2_function(formula,parameters,start,data=NULL,trace=FALSE)
+calc_mle2_function(formula,parameters,start,
+   parnames,data=NULL,trace=FALSE)
 }
 \arguments{
   \item{minuslogl}{Function to calculate negative log-likelihood.}
@@ -32,6 +34,7 @@ calc_mle2_function(formula,parameters,start,data=NULL,trace=FALSE)
   \item{vecpar}{Logical: is first argument a vector of all parameters?
     (For compatibility with \code{\link{optim}}.)}
   \item{parameters}{List of linear models for parameters}
+  \item{parnames}{List (or vector?) of parameter names}
   \item{gr}{gradient function}
   \item{\dots}{Further arguments to pass to optimizer}
   \item{formula}{a formula for the likelihood (see Details)}
