@@ -1,3 +1,13 @@
+15/08/2009
+
+* added deviance, residuals methods
+* added newparams argument to predict, simulate;
+   newdata argument to simulate
+* added vignette (stub)
+* added explicit params argument, to help sort out
+  full parameter specifications when parameters is
+  non-NULL
+
 0.9.2 10/08/2009
 * fixed predict() for case with parameters
 * added snorm
